--- a/index.css
+++ b/index.css
@@ -111,7 +111,7 @@ main{
   border-radius: 50px;
   display: inline-block;
   text-align: center;
-  font-weight: 600px;
+  font-weight: 600;
   margin-bottom: 15px;
 }
 
